cluster_deployment/pizzly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sandbox-pizzly
  name: sandbox-pizzly-widget
  labels:
    app: sandbox-pizzly-widget
    product: sandbox-pizzly
    app.kubernetes.io/name: "sandbox-pizzly-widget"
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: "davide"
    app.kubernetes.io/component: "sandbox-pizzly-widget"
    app.kubernetes.io/part-of: "sandbox-pizzly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-pizzly-widget
  template:
    metadata:
      labels:
        app: sandbox-pizzly-widget
    spec:
      containers:
        - name: sandbox-pizzly-widget
          image: davidep931/pizzly-proxy:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/home/node/app/integrations"
              name: pizzlystorage
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              cpu: "75m"
              memory: "200Mi"
        - name: sandbox-pizzly-widget-sidecar
          image: redis:rc-alpine3.13
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              cpu: "75m"
              memory: "200Mi"
      volumes:
        - name: pizzlystorage
          persistentVolumeClaim:
            claimName: sandbox-pizzly-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: sandbox-pizzly
  name: sandbox-pizzly-widget
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sandbox-pizzly-widget
---
apiVersion: v1
kind: Service
metadata:
  namespace: sandbox-pizzly
  name: sandbox-pizzly-widget-sidecar
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: sandbox-pizzly-widget-sidecar
