cluster_deployment/pizzly-two-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: products-perf-pizzly
  name: products-perf-pizzly-two-widget
  labels:
    app: products-perf-pizzly-two-widget
    product: products-perf-pizzly
    app.kubernetes.io/name: "products-perf-pizzly-two-widget"
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: "davide"
    app.kubernetes.io/component: "products-perf-pizzly-two-widget"
    app.kubernetes.io/part-of: "products-perf-pizzly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-perf-pizzly-two-widget
  template:
    metadata:
      labels:
        app: products-perf-pizzly-two-widget
    spec:
      containers:
        - name: products-perf-pizzly-two-widget
          image: davidep931/pizzly-proxy:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/home/node/app/integrations"
              name: pizzlystorage
      volumes:
        - name: pizzlystorage
          persistentVolumeClaim:
            claimName: products-perf-pizzly-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: products-perf-pizzly
  name: products-perf-pizzly-two-widget
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: products-perf-pizzly-two-widget
