cluster_deployment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: postgres
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
